[package]
name = "ant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
packed_struct = "0.6.1"
konst = "0.2.13"
const-utils = "0.1.1"
arrayvec = "0.7.2"
ant-derive = { path = "../ant-derive", version = "0.1.0" }
thiserror = "1.0.33"
embedded-hal = "0.2.7"
nb = "0.1.3"

[target.'cfg(target_os = "linux")'.dev-dependencies]
linux-embedded-hal = "0.3.2"

[target.'cfg(target_os = "macos")'.dependencies]
rusb = "0.9.1"

[dev-dependencies]
dialoguer = "0.9.0"
inner = "0.1.1"

[[test]]
name = "serial"

