[package]
name = "ant"
description = "ANT, ANT-FS, ANT+ drivers, parsers and managers"
repository = "https://github.com/cujomalainey/ant-rs"
authors = ["Curtis Malainey <curtis@malainey.com>"]
license = "MIT OR Apache-2.0"
keywords = ["ANT", "ANT+", "ANT-FS", "driver", "serialization", "no_std"]
categories = ["embedded development", "encoding", "hardware support", "no_std"]
readme = "../README.md"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
packed_struct = {version = "0.6.1", default-features = false}
konst = "0.2.13"
const-utils = "0.1.1"
arrayvec = {version = "0.7.2", default-features = false}
ant-derive = { path = "../ant-derive", version = "0.1.0" }
embedded-hal = "0.2.7"
nb = "0.1.3"
rusb = {version = "0.9.1", optional = true}

[target.'cfg(target_os = "linux")'.dev-dependencies]
linux-embedded-hal = "0.3.2"

[dev-dependencies]
dialoguer = "0.9.0"
inner = "0.1.1"

[features]
default = ["std", "alloc", "usb", "usb_adapter"]
std = ["arrayvec/std", "packed_struct/std", "alloc"]
alloc = []
usb = ["std"]
usb_adapter = ["dep:rusb", "usb"]

[[test]]
name = "serial"

