[package]
name = "serial-fuzz-target"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
afl = "*"
embedded-hal = "*"
embedded-hal-nb = "*"
nb = "*"
ant = {version = "*", path = "../ant"}
